# phunction.sh

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  GOAL.md  LICENSE  README.md  Trunk.toml  VISION.md  _typos.toml  index.html  justfile  package-lock.json  package.json  playwright.config.mjs  rust-toolchain.toml  rustc-ice-2026-07-16T14_30_52-21325.txt  rustc-ice-2026-07-16T14_30_57-21418.txt  rustc-ice-2026-07-16T14_30_58-21437.txt  rustc-ice-2026-07-16T14_31_00-21456.txt  rustc-ice-2026-07-16T14_31_01-21475.txt  rustc-ice-2026-07-16T14_31_02-21496.txt  rustc-ice-2026-07-16T14_31_08-21729.txt  rustc-ice-2026-07-16T14_31_14-21875.txt  rustc-ice-2026-07-16T14_31_20-21894.txt  rustc-ice-2026-07-16T14_31_26-21913.txt  rustc-ice-2026-07-16T14_31_31-21932.txt  wrangler.toml
.cargo/: config.toml
.cursor/rules/: phunction.mdc
.github/workflows/: ship.yml
crates/phazor-core/: Cargo.toml
crates/phazor-core/benches/: engine.rs
crates/phazor-core/src/: engine.rs  event.rs  fx.rs  lib.rs  math.rs  meter.rs  score.rs  seq.rs  spectrum.rs  transport.rs  voice.rs
crates/phazor-web/: Cargo.toml
crates/phazor-web/src/: lib.rs  worklet.rs
crates/phunction-app/: Cargo.toml
crates/phunction-app/src/: camera.rs  design_lab.rs  expr_slot.rs  fractal.rs  fun.rs  gfx_gate.rs  hud.rs  lab.rs  main.rs  mic.rs  midi.rs  pages.rs  patchbay.rs  phasor_hero.rs  phazor_panel.rs  presets.rs  rack.rs  raf.rs  sigil.rs  studio.rs  substrate.rs  topbar.rs  trace.rs
crates/phunction-gfx/: Cargo.toml
crates/phunction-gfx/shaders/: argand.wgsl  basilica.wgsl  bulb.wgsl  citadel.wgsl  cortex.wgsl  current.wgsl  gasket.wgsl  gyroid.wgsl  hopf.wgsl  indra.wgsl  lenia.wgsl  lenia_present.wgsl  maw.wgsl  petri.wgsl  petri_present.wgsl  prelude.wgsl  silk.wgsl  specter.wgsl  substrate.wgsl
crates/phunction-gfx/src/: context.rs  feedback_phunctor.rs  field_phunctor.rs  lib.rs  phunctor.rs  scene.rs  shader_phunctor.rs
crates/phunction-graph/: Cargo.toml
crates/phunction-graph/src/: expr.rs  graph.rs  lib.rs  library.rs  patch.rs  value.rs
docs/: aesthetic.md  architecture.md  audio-engine.md  crates-policy.md  deploy.md  gfx.md  journal.md  review-guidelines.md
docs/decisions/: 0001-design-direction.md  README.md
docs/design/: ethos.md
public/: _headers
scripts/: serve-dist.mjs  smoke.mjs
styles/: design-lab.css  phunction.css
tests/ui/: phazor.spec.mjs
