[package]
name = "phunction-app"
description = "The phunction.sh site: Leptos shell wiring the gfx and audio engines into one instrument."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
phazor-core.workspace = true
phazor-web.workspace = true
phunction-gfx.workspace = true
leptos.workspace = true
leptos_router.workspace = true
console_error_panic_hook.workspace = true
tracing.workspace = true
# web deps are unconditional: leptos event-handler signatures name web_sys
# types even in native check builds (where the APIs are compile-only stubs).
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
web-time.workspace = true
web-sys = { workspace = true, features = [
    "Window",
    "Document",
    "console",
    "Element",
    "HtmlCanvasElement",
    "PointerEvent",
    "KeyboardEvent",
    "WheelEvent",
    "CssStyleDeclaration",
] }

[lints]
workspace = true
