[package]
name = "phunction-gfx"
description = "The phunction visual engine: a wgpu harness that hosts hot-swappable 'phunctors' (shader-art modules)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
wgpu.workspace = true
glam.workspace = true
thiserror.workspace = true
tracing.workspace = true
web-time.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = ["HtmlCanvasElement"] }

[lints]
workspace = true
