[package]
name = "phunction-graph"
description = "The typed dataflow core: rich port types, adapter-aware connection rules, the prebuilt block library. Target-agnostic — the patchbay UI is a client."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Deliberately tiny, like phazor-core: pure logic, natively tested.

[dev-dependencies]
approx.workspace = true

[lints]
workspace = true
